[package]
name = "poker-contracts"
version = "0.0.1"
edition = "2021"


[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.9.29"

[dev-dependencies]
solana-program-test = "~1.9.29"
solana-sdk = "~1.9.29"

[lib]
name = "poker_contracts"
crate-type = ["cdylib", "lib"]
